# kruxiaflow

./: .dockerignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  PROFILING.md  README.md  SECURITY.md  book.toml  codecov.yml  dev  dkc.logs  docker  docker-compose.cloud.yml  docker-compose.develop.yml  docker-compose.examples.yml  docker-compose.override.yml  docker-compose.profiling.yml  docker-compose.yml  docker-entrypoint-deploy.sh  docker-entrypoint-develop.sh  docker-entrypoint-profiling.sh
activity/: Cargo.toml
activity/src/: http.rs  lib.rs
api/: Cargo.toml  build.rs
api/src/: error.rs  extractors.rs  lib.rs  openapi.rs  routes.rs  state.rs
api/src/dto/: mod.rs  output.rs  workflow.rs
api/src/handlers/: cache.rs  cost.rs  health.rs  llm_catalog.rs  mod.rs  oauth.rs  outputs.rs  schedules.rs  signals.rs  streaming.rs  users.rs  websocket.rs  workers.rs  workflow_definitions.rs  workflow_events.rs  workflows.rs
api/src/health/: checks.rs  error.rs  mod.rs  responses.rs
api/src/middleware/: auth.rs  cors.rs  mod.rs  request_id.rs  shutdown.rs
api/src/websocket/: connection_manager.rs  messages.rs  mod.rs
api/src/workflow_events/: manager.rs  messages.rs  mod.rs  poller.rs
api/tests/: auth_middleware_tests.rs  cors_tests.rs  dto_conversion_tests.rs  error_handling_test.rs  example_03_e2e_test.rs  example_10_e2e_test.rs  health_integration_tests.rs  oauth_handler_tests.rs  output_retrieval_tests.rs  shutdown_middleware_tests.rs  user_creation_tests.rs  websocket_integration_tests.rs  worker_activity_integration_tests.rs  workflow_definition_tests.rs  workflow_events_ws_tests.rs  workflow_query_tests.rs  workflow_submission_tests.rs  yaml_workflow_e2e_tests.rs
benchmark/: Cargo.toml
benchmark/src/: lib.rs
benchmark/tests/: load_tests.rs
benchmarks/: .gitignore  Dockerfile.benchmark  README.md  docker-compose.yml  pyproject.toml  run_benchmark.py
benchmarks/airflow/: benchmark.py  dags.py  operators.py
benchmarks/airflow_bench/: __init__.py  benchmark.py  dags.py
benchmarks/kruxiaflow/: benchmark.py  workflows.py
benchmarks/shared/: report.py  resource_monitor.py
benchmarks/streamflow/: benchmark.py  workflows.py
benchmarks/temporal/: activities.py  benchmark.py  workflows.py
core/: Cargo.toml
core/.sqlx/: query-041b05a5b169f15d701d14e072f22b815bca747569483c7f86ba1cfa9346afc3.json  query-34b38573ef32cc9cb2211e6e8b3577c7a58cf37b45e788e243f494d078f1f405.json  query-548a7da86b55fada74ad6d8ce3a79a7432221472aa6264a61d1413df447620f3.json  query-5dd169efea9a7c95525f53f7d9ae1cf3a469df1761dc8111adc81b394bfb7196.json  query-8baac4d384bfb10942a5fd44ce806064911f19c463e0b718636be700d2956405.json  query-98bba7deaadb2e7c05f4723fcf7f4deb04462c815def87a0d760fc866d6e7da7.json  query-b127027f5933b8348ae2a0954a02af511c5c1e7ba976b2ea84e870c1580fa700.json  query-e49b28f7fb34eb64f674fb1f195df05142ae46043c0ae5b847dc0ce61d5d918b.json  query-e6fea29ad7c498e36c830e776c6e124531a193a9d42d8cc4404107645e70cd4b.json  query-e910eb7f73df30c5986dfaa46730d09308a0c740eb63a408869125066fd15fea.json  query-eda9e7f97bc50116e1aae8a1173354d777b5f74177c706413b87b9448711418f.json
core/benches/: loop_performance.rs
core/src/: lib.rs
core/src/activity/: mod.rs  worker_service.rs
core/src/cache/: key_generator.rs  mod.rs  noop.rs  redis.rs
core/src/cost/: calculator.rs  mod.rs  tracker.rs  usage.rs
core/tests/: activity_worker_service_tests.rs  backoff_tests.rs  batched_claim_tests.rs  dependency_evaluation_tests.rs  event_model_tests.rs  event_tests.rs  llm_budget_integration_tests.rs  orchestrator_config_tests.rs  orchestrator_integration_tests.rs  orchestrator_loop_tests.rs  output_type_tests.rs  queue_config_tests.rs  queue_model_tests.rs  queue_tests.rs  retry_integration_tests.rs  scheduling_integration_tests.rs  state_management_tests.rs  storage_tests.rs  subscription_integration_tests.rs  workflow_definition_tests.rs  yaml_workflow_tests.rs
dashboard/: Cargo.toml
dashboard/assets/: dashboard.html
dashboard/src/: lib.rs
docs/: README.md  (+26 more)
kruxiaflow/: Cargo.toml  build.rs
kruxiaflow-mcp/: .gitignore  README.md  pyproject.toml
kruxiaflow-mcp/tests/: __init__.py  conftest.py  test_client.py  test_config.py
kruxiaflow/src/: config.rs  llm_catalog.rs  logging.rs  main.rs
kruxiaflow/tests/: cli_integration_tests.rs  distributed_deployment_tests.rs  serve_lifecycle_tests.rs
oauth/: Cargo.toml
oauth/src/: lib.rs  postgres.rs
oauth/tests/: integration_tests.rs  private.pem  public.pem  unit_tests.rs
profiling/: Cargo.toml
profiling/src/: bottleneck.rs  capacity.rs  client.rs  lib.rs  metrics.rs  monitor.rs  scenarios.rs  stress.rs
profiling/tests/: load_tests.rs  stress_tests.rs
py/: Dockerfile  README.md  pyproject.toml
py/examples/: 01_weather_report.py  02_user_validation.py  03_document_processing.py  04_moderate_content.py  05_research_assistant.py
py/kruxiaflow/: __init__.py  expressions.py  models.py  types.py
py/tests/: test_client.py  test_expressions.py  test_models.py  test_yaml_serialization.py
streamflow/: Cargo.toml
streamflow/src/: config.rs  llm_catalog.rs  logging.rs  main.rs  signals.rs
streamflow/tests/: cli_integration_tests.rs  distributed_deployment_tests.rs
worker/: Cargo.toml
worker-sdk/: Cargo.toml  LICENSE-MIT  README.md
worker-sdk/examples/: echo_worker.rs  graceful_drain.rs  llm_usage_worker.rs
worker-sdk/src/: client.rs  config.rs  context.rs  error.rs  lib.rs  poller.rs  registry.rs  result.rs  types.rs  worker.rs
worker-sdk/tests/: protocol_test.rs
worker/src/: activity_result.rs  builtin.rs  client.rs  client_test.rs  config.rs  executor.rs  file_executor.rs  lib.rs  manager.rs  poller.rs  registry.rs  registry_test.rs  std_worker.rs  streaming.rs
worker/tests/: activity_timeout_tests.rs  cache_integration_test.rs  email_activity_integration_test.rs  embedding_streaming_test.rs  file_workflow_integration_test.rs  http_activity_integration_test.rs  worker_integration_test.rs
(+665 files in other folders)
