[workspace]
members = [
    "core",
    "api",
    "oauth",
    "activity",
    "dashboard",
    "streamflow",
    "worker",
    "profiling",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Sean Harrison <sah@kruxia.com>"]
license = "MIT"
description = "High-performance workflow orchestration platform for AI-native workloads"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }

# UUID and time
uuid = { version = "1.10", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Authentication
jsonwebtoken = "9.3"
bcrypt = "0.15"
sha2 = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Testing
mockall = "0.13"
serial_test = "3.1"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
debug = true        # Enable debug symbols for profiling

[profile.release-fast]
inherits = "release"
opt-level = 3       # Optimize for speed
lto = "fat"         # Aggressive cross-crate LTO for maximum speed

[profile.profiling]
inherits = "release"
strip = false       # Keep symbols for profiling
debug = true        # Full debug info for profiling tools
split-debuginfo = "unpacked"  # Embed debug info in binary on macOS (needed for jeprof)
lto = "thin"        # Use thin LTO to preserve more symbols than fat LTO
