[workspace]
members = [
    "core",
    "api",
    "oauth",
    "dashboard",
    "kruxiaflow",
    "worker",
    "worker-sdk",
    "profiling",
]
resolver = "2"

# Release flow: `cargo release <version> --execute` bumps this version,
# commits, tags v<version>, and pushes — no manual tag/metadata sync.
# Install once with: cargo install cargo-release
[workspace.metadata.release]
publish = false
shared-version = true
tag-name = "v{{version}}"
# The "release:" prefix lets CI skip the redundant branch-push run — the tag
# run (same SHA) executes the full pipeline (see .github/workflows/main-ci.yml)
pre-release-commit-message = "release: v{{version}}"

[workspace.package]
version = "0.8.2"
edition = "2024"
authors = ["Sean Harrison <sah@kruxia.com>"]
license = "Apache-2.0"
description = "High-performance workflow orchestration platform for AI-native workloads"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
async-stream = "0.3"
bytes = "1.8"
futures = "0.3"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio", "postgres", "tls-rustls", 
    "uuid", "chrono", "json", "migrate", "rust_decimal"
] }

# UUID and time
uuid = { version = "1.10", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rust_decimal = { version = "1.36", features = ["serde", "db-postgres"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Authentication
jsonwebtoken = "9.3"
bcrypt = "0.15"
sha2 = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Testing
mockall = "0.13"
serial_test = "3.1"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
debug = true        # Enable debug symbols for profiling

[profile.release-fast]
inherits = "release"
opt-level = 3       # Optimize for speed
lto = "fat"         # Aggressive cross-crate LTO for maximum speed

[profile.profiling]
inherits = "release"
strip = false       # Keep symbols for profiling
debug = true        # Full debug info for profiling tools
split-debuginfo = "unpacked"  # Embed debug info in binary on macOS (needed for jeprof)
lto = "thin"        # Use thin LTO to preserve more symbols than fat LTO
