[package]
name = "streamflow-activity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
streamflow-core = { path = "../core" }
tokio.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
