[package]
name = "streamflow-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
# Workspace dependencies
streamflow-core = { path = "../core" }
streamflow-oauth = { path = "../oauth" }
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true

# OpenAPI generation and documentation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono", "decimal_float"] }
utoipa-redoc = { version = "5", features = ["axum"] }

[dev-dependencies]
streamflow-worker = { path = "../worker" }
tokio = { workspace = true, features = ["test-util"] }
serial_test.workspace = true
axum-test = "15.0"
futures = "0.3"
reqwest = { workspace = true }
