[project]
name = "streamflow-benchmarks"
version = "0.2.0"
description = "Cross-platform workflow engine benchmarks: StreamFlow vs Temporal vs Airflow"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",           # CLI framework
    "httpx>=0.27.0",          # Async HTTP client (for StreamFlow)
    "temporalio>=1.7.0",      # Temporal Python SDK
    "apache-airflow>=2.9.0",  # Airflow for DAG definitions and API client
    "apache-airflow-providers-http>=4.0.0",  # HTTP provider for Airflow
    "jinja2>=3.1.0",          # HTML report templates
]

[project.scripts]
benchmark = "run_benchmark:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
