[project]
name = "kruxiaflow-benchmarks"
version = "0.3.0"
description = "Cross-platform workflow engine benchmarks: Kruxia Flow vs Temporal vs Airflow"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",           # CLI framework
    "httpx>=0.27.0",          # Async HTTP client (for Kruxia Flow)
    "temporalio>=1.7.0",      # Temporal Python SDK
    "apache-airflow>=3.0.0",  # Airflow 3 for DAG definitions and API client
    "jinja2>=3.1.0",          # HTML report templates
    "docker>=7.0.0",          # Docker SDK for resource monitoring
]

[project.scripts]
benchmark = "run_benchmark:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
