[package]
name = "streamflow-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Additional dependencies
regex = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
mockall.workspace = true
serial_test.workspace = true
