[package]
name = "streamflow-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
async-stream.workspace = true
bytes.workspace = true
futures.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
rust_decimal.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Additional dependencies
regex = "1"
minijinja = "2.6"
sha2 = "0.10"

# Optional dependencies
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
mockall.workspace = true
serial_test.workspace = true
rust_decimal_macros = "1.36"
criterion = "0.5"

[features]
# Enable profiling feature for detailed instrumentation
# This feature gates expensive tracing spans in hot paths
profiling = []

# Enable Redis-backed caching
redis-cache = ["redis"]

[[bench]]
name = "loop_performance"
harness = false
