[package]
name = "kruxiaflow-dashboard"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# Leaf assets crate: serves the embedded dashboard pages. Depended on by
# kruxiaflow-api (which mounts the router) — must not depend on api/core.
[dependencies]
axum.workspace = true
