[package]
name = "kruxiaflow"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "kruxiaflow"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rust_decimal = { workspace = true }

# Internal dependencies
kruxiaflow-api = { path = "../api" }
kruxiaflow-core = { path = "../core", features = [] }
kruxiaflow-oauth = { path = "../oauth" }
kruxiaflow-std-worker = { path = "../worker", features = [] }

# Database
sqlx = { workspace = true }

# UUIDs
uuid = { workspace = true }

# Web framework
axum = { workspace = true }

# Signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio-stream = "0.1"
tokio-util = { workspace = true }

# Password hashing
bcrypt = { workspace = true }

# HTTP client (for health check command)
reqwest = { workspace = true }

# Time
chrono = { workspace = true }

# MCP Server (optional - all gated behind mcp-server feature)
rust-mcp-sdk = { version = "0.9.0", optional = true }
async-trait = { workspace = true, optional = true }
http = { version = "1", optional = true }

[dev-dependencies]
serial_test = { workspace = true }
wiremock = "0.6"
rust_decimal_macros = "1.36"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional=true, features=["profiling"] }

[features]
default = []  # MCP excluded by default (opt-in for smaller edge binaries)
mcp-server = ["dep:rust-mcp-sdk", "dep:async-trait", "dep:http"]
profiling = ["tikv-jemallocator", "kruxiaflow-core/profiling", "kruxiaflow-std-worker/profiling"]
redis-cache = ["kruxiaflow-core/redis-cache"]
