[package]
name = "streamflow-oauth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "OAuth 2.0 authentication service for StreamFlow"

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
sha2.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
serial_test.workspace = true
