[package]
name = "streamflow-profiling"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Internal performance profiling suite for StreamFlow"

[dependencies]
# HTTP client for API calls
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Testing
serial_test = { workspace = true }

# StreamFlow dependencies (for workflow definitions only, not direct DB access)
streamflow-core = { path = "../core" }

[dev-dependencies]
# None needed - all tests are in main src/
