[package]
name = "kruxiaflow-profiling"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Internal performance profiling suite for Kruxia Flow"

[dependencies]
# HTTP client for API calls
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Testing
serial_test = { workspace = true }

# System resource monitoring
sysinfo = "0.32"

# CLI argument parsing
clap = { workspace = true }

# Kruxia Flow dependencies (for workflow definitions only, not direct DB access)
kruxiaflow-core = { path = "../core" }

[[bin]]
name = "stress-test"
path = "src/bin/stress-test.rs"

[dev-dependencies]
# None needed - all tests are in main src/
