[package]
name = "streamflow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "streamflow"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rust_decimal = { workspace = true }

# Internal dependencies
streamflow-api = { path = "../api" }
streamflow-core = { path = "../core", features = [] }
streamflow-oauth = { path = "../oauth" }
streamflow-worker = { path = "../worker", features = [] }

# Database
sqlx = { workspace = true }

# UUIDs
uuid = { workspace = true }

# Web framework
axum = { workspace = true }

# Signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio-stream = "0.1"
tokio-util = { workspace = true }

# Password hashing
bcrypt = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional=true, features=["profiling"] }

[features]
profiling = ["tikv-jemallocator", "streamflow-core/profiling", "streamflow-worker/profiling"]
