[package]
name = "streamflow-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Built-in activity worker for StreamFlow"

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

# HTTP client (for HTTP activity)
reqwest = { version = "0.12", features = ["json"] }

# Database client (for PostgreSQL activity)
sqlx = { workspace = true }

# UUID and time
uuid = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Internal dependencies
streamflow-core = { path = "../core" }

[dev-dependencies]
tokio-test = "0.4"
mockall = { workspace = true }
serial_test = { workspace = true }
axum = { workspace = true }
axum-test = "15.0"
sqlx = { workspace = true }
streamflow-api = { path = "../api" }
streamflow-core = { path = "../core" }
streamflow-oauth = { path = "../oauth" }
bcrypt = { workspace = true }

[features]
# Enable profiling feature for profiling builds
# This feature gates expensive tracing instrumentation
profiling = []
