[package]
name = "kruxiaflow-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Built-in activity worker for Kruxia Flow"

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

# HTTP client (for HTTP activity and SSE streaming)
reqwest = { version = "0.12", features = ["json", "stream", "gzip"] }

# Database client (for PostgreSQL activity)
sqlx = { workspace = true }

# Email client (for email activity)
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
url = "2.5"
urlencoding = "2.1"

# UUID and time
uuid = { workspace = true }
chrono = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Internal dependencies
kruxiaflow-core = { path = "../core", features = ["redis-cache"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = { workspace = true }
serial_test = { workspace = true }
axum = { workspace = true }
axum-test = "15.0"
sqlx = { workspace = true }
kruxiaflow-api = { path = "../api" }
kruxiaflow-core = { path = "../core" }
kruxiaflow-oauth = { path = "../oauth" }
bcrypt = { workspace = true }
wiremock = "0.6"
rust_decimal_macros = "1.36"

[features]
# Enable profiling feature for profiling builds
# This feature gates expensive tracing instrumentation
profiling = []
# Enable Redis caching support (for tests and production)
redis-cache = ["kruxiaflow-core/redis-cache"]
